# Ashira

./: .gitignore  README.md  pyproject.toml
dashboard/: ASHIRA_narrativa.html  ASHIRA_narrativa.qmd  ashira_custom.css  ashira_theme_toggle.html  globe.gl.min.js  index.qmd
datos/censo2020/: cpv2020_a_alimentacion.xlsx  cpv2020_a_educacion.xlsx  cpv2020_a_etnicidad.xlsx
docs/: ASHIRA_narrativa.html  CNAME  ashira_custom.css  index.html
